# marketing_posts_agent

./: .gitignore  README.md  marketing_copies.md  pyproject.toml  report.md
src/marketing_posts/: crew.py  main.py
src/marketing_posts/config/: tasks.yaml
src/project1_researcher/: crew.py  main.py
src/research_agent/: crew.py  main.py
