[project]
name = "research_agent"
version = "0.1.0"
description = "research_agent using crewAI"
authors = [{ name = "Shireen", email = "shireenlowyk@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
project1_researcher = "project1_researcher.main:run"
run_crew = "project1_researcher.main:run"
train = "project1_researcher.main:train"
replay = "project1_researcher.main:replay"
test = "project1_researcher.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
