[project]
name = "research_agent"
version = "0.1.0"
description = "research_agent using crewAI"
authors = [{ name = "Shireen", email = "shireenlowyk@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
research_agent = "research_agent.main:run"
run_crew = "research_agent.main:run"
train = "research_agent.main:train"
replay = "research_agent.main:replay"
test = "research_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
